Fixed html element overflow on mobile

--- a/AssetsKit/Assets/less/Source/root.less
+++ b/AssetsKit/Assets/less/Source/root.less
@@ -12,6 +12,7 @@ html, body
     width: 100%;
     margin: 0;
     padding: 0;
+    overflow-y: auto;
 }
 
 body
